crates/strider-analyze/tests/snapshots/aarch64be__builtins__expect_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "15" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x65:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffff9b:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
